<?xml version="1.0"?>
<package>
  <name>ocars</name>
  <version>0.0.1</version>
  <description>
	OCARS - Organ Cell Assembly Robot System Metapackage
  </description>

  <author email="luoyang@sia.cn">Yang Luo</author>
  <maintainer email="luoyang@sia.cn">Yang Luo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gripper_description</run_depend>
  <run_depend>guideway_description</run_depend>
  <run_depend>rm_75_description</run_depend>
  <run_depend>ocars_description</run_depend>
  <run_depend>ocars_msgs</run_depend>
  <run_depend>ocars_bringup</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
     <metapackage/>
  </export>
</package>
